fix: align.scss 가운데 정렬

--- a/scss/layout/_align.scss
+++ b/scss/layout/_align.scss
@@ -49,4 +49,12 @@
       text-align: right;
     }
   }
+
+  .mxauto {
+    width: rem(1224);
+    margin: 0 auto;
+    @include mobile {
+      width: 100%;
+    }
+  }
 }
